syntax = "proto3";
package saonetwork.sao.market;

option go_package = "github.com/SaoNetwork/sao/x/market/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 

message Pool {
  string index = 1; 
  cosmos.base.v1beta1.DecCoin incomePerSecond = 2 [(gogoproto.nullable) = false]; 
  cosmos.base.v1beta1.Coin totalBalance = 3 [(gogoproto.nullable) = false]; 
  cosmos.base.v1beta1.Coin totalPaid = 4 [(gogoproto.nullable) = false]; 
  
}

